<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color"></View>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/ll_mine_page"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:clickable="true"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_mine"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/bottom_asset_normol"/>
            <TextView
                android:id="@+id/txt_mine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:text="@string/tabbar_bottom_mine"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_page"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_search"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/bottom_search_normol"/>
            <TextView
                android:id="@+id/txt_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:text="@string/tabbar_bottom_search"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_more_page"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_more"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/bottom_more_select"/>
            <TextView
                android:id="@+id/txt_more"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="10sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="3dp"
                android:text="@string/tabbar_bottom_more"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
