<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar_title"></include>
        <!--工号-->
        <RelativeLayout
            android:layout_marginLeft="38dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/img_job_num"
                android:layout_centerVertical="true"
                android:layout_width="18dp"
                android:src="@drawable/register_job_id"
                android:gravity="center_vertical"
                android:layout_height="23dp" />
           <RelativeLayout
               android:orientation="vertical"
               android:layout_marginLeft="11dp"
               android:layout_toRightOf="@+id/img_job_num"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <EditText
                   android:id="@+id/edit_job_num"
                   android:background="@null"
                   android:inputType="number"
                   android:maxLength="6"
                   android:singleLine="true"
                   android:textSize="15dp"
                   android:textColorHint="@color/common_txt_bg"
                   android:hint="@string/hint_input_job_num"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent" />
               <View
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_alignParentBottom="true"
                   android:background="@color/line_color"/>
           </RelativeLayout>
        </RelativeLayout>

        <!--姓名-->
        <RelativeLayout
            android:layout_marginLeft="38dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/txt_name"
                android:layout_centerVertical="true"
                android:layout_height="23dp"
                android:src="@drawable/register_username"
                android:gravity="center_vertical"
                android:layout_width="18dp" />
            <RelativeLayout
                android:orientation="vertical"
                android:layout_marginLeft="11dp"
                android:layout_toRightOf="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/edit_user_name"
                    android:background="@null"
                    android:textSize="15dp"
                    android:hint="@string/hint_input_name"
                    android:maxLength="22"
                    android:textColorHint="@color/common_txt_bg"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color"/>
            </RelativeLayout>
        </RelativeLayout>
        <!--密码-->
        <RelativeLayout
            android:layout_marginLeft="38dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:src="@drawable/register_password"
                android:id="@+id/txt_user_password"
                android:layout_centerVertical="true"
                android:layout_width="18dp"
                android:gravity="center_vertical"
                android:layout_height="23dp" />
            <RelativeLayout
                android:orientation="vertical"
                android:layout_marginLeft="11dp"
                android:layout_toRightOf="@+id/txt_user_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/edit_password"
                    android:background="@null"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:textSize="15dp"
                    android:maxLength="6"
                    android:layout_toLeftOf="@+id/password_img_btn"
                    android:textColorHint="@color/common_txt_bg"
                    android:hint="@string/hint_input_job_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color"/>
                    <ImageButton
                        android:id="@+id/password_img_btn"
                        android:layout_gravity="center|right"
                        android:layout_width="25dp"
                        android:layout_height="15dp"
                        android:layout_marginLeft="5dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="15dp"
                        android:background="@drawable/device_add_password_close"
                        />
                <!--</LinearLayout>-->
            </RelativeLayout>
        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginLeft="38dp"
            android:layout_marginRight="40dp"
            android:textSize="12dp"
            android:hint="@string/register_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_register"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/register_btn_bg"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:id="@+id/btn_register"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <com.mobile.tiandy.asset.common.common.CircleProgressBarView
            android:id="@+id/circleProgressBarView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>
